ConfigPlayerList + some mojang lookup cache tweaks